# OWASP

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROJECT_PLAN.md  README.md  TASKS.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
Data/Parameters/: sqli_parameters.txt  xss_parameters.txt
Data/Payloads/: sqli_patterns.txt  sqli_payloads.json  xss_patterns.json  xsstrike_payloads.json
Data/Payloads/csrf_payloads/: csrf_test_tokens.json  framework_signatures.json
Data/Queries/: __init__.py  q_payloads.py  q_reports.py  q_scans.py  scan_stats.py
Data/csrf_scan_results/: results.txt
Data/sqli_scan_results/: results.txt
Data/xss_scan_results/: results.txt
Logic/: config.py  env_utils.py  logging_config.py  user_agents.py
Logic/Data/csrf_scan_results/: results.txt
Logic/Recon/: database_manager.py  framework_detector.py  http_client.py  waf_bypass.py
Logic/vulnerability_scan/: Scanner_vulnerability.py  findings.py  xss_scan.py
Logic/vulnerability_scan/csrf/: __init__.py  authenticator.py  bypass_strategies.py  csrf_scanner.py  form_discoverer.py  framework_csrf_scanner.py  global_strategies.py  patterns.py  poc_generator.py
Logic/vulnerability_scan/sqli/: __init__.py  orchestrator.py  payload_manager.py  sqli_context.py
Logic/vulnerability_scan/sqli/scanners/: base.py  blind.py  builtin.py  sqlmap.py
Logic/vulnerability_scan/xss/: __init__.py  http_client.py  orchestrator.py  payload_manager.py  xss_context.py
UI/: csrf_scan.py  main.py  scan_utils.py  sqli_scan.py  xss_scan.py
docs/: ARCHITECTURE.md  USER_GUIDE.md
owasp_inspector/cli/: app.py  history.py
owasp_inspector/core/: config.py  discovery_cache.py  exceptions.py  http.py  lifecycle.py  models.py  module.py  orchestrator.py  profiles.py  ratelimit.py  registry.py
owasp_inspector/discovery/: cookies.py  crawl.py  engine.py  fingerprint.py  models.py  robots.py  sitemap.py  target.py  tls.py
owasp_inspector/modules/: __init__.py  _legacy_bootstrap.py  _legacy_common.py  _raw_finding.py  auth_failures.py  crypto_failures.py  csrf.py  idor.py  insecure_design.py  misconfiguration.py  software_integrity.py  sqli.py  ssrf.py  vulnerable_components.py  xss.py
owasp_inspector/modules/csrf/: __init__.py  bypass_tests.py  context.py  patterns.py
owasp_inspector/modules/sqli/: __init__.py  builtin.py  context.py  payloads.py
owasp_inspector/modules/xss/: __init__.py  context.py  payloads.py  reflected.py
owasp_inspector/reporting/: builder.py  models.py  risk.py  serialize.py  summary.py
owasp_inspector/reporting/renderers/: html_renderer.py  json_renderer.py  markdown_renderer.py  pdf_renderer.py
owasp_inspector/reporting/templates/: report.html.jinja2
owasp_inspector/safety/: authorization.py
scripts/: benchmark_discovery.py
tests/: _report_fixtures.py  conftest.py  test_cli_app.py  test_cli_history.py  test_core_discovery_cache.py  test_core_http.py  test_core_lifecycle.py  test_core_models.py  test_core_orchestrator.py  test_core_profiles.py  test_core_ratelimit.py  test_core_registry.py  test_csrf_bypass_tests.py  test_csrf_context.py  test_csrf_fixes.py  test_csrf_patterns.py  test_discovery_cookies.py  test_discovery_crawl.py  test_discovery_crawl_performance.py  test_discovery_engine.py  test_discovery_fingerprint.py  test_discovery_robots.py  test_discovery_sitemap.py  test_discovery_target.py  test_discovery_tls.py  test_env_utils.py  test_imports.py  test_modules_auth_failures.py  test_modules_common.py  test_modules_crypto_failures.py  test_modules_csrf.py  test_modules_idor.py  test_modules_insecure_design.py  test_modules_legacy_wrap.py  test_modules_misconfiguration.py  test_modules_misconfiguration_sensitive_paths.py  test_modules_software_integrity.py  test_modules_sqli.py  test_modules_ssrf.py  test_modules_vulnerable_components.py  (+14 more)
(+6 files in other folders)
