[project]
name = "owasp-inspector"
version = "0.1.0"
description = "Automated OWASP Top 10 assessment engine (SQLi, XSS, CSRF today; more modules landing per the v1 roadmap)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "httpx",
    "python-dotenv",
    "psycopg2-binary",
    "requests",
    "urllib3",
    "colorama",
    "pydantic-settings>=2.0",
    "jinja2>=3.0",
    "xhtml2pdf>=0.2.11",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]
# sqlmap integration expects the `sqlmap` binary on PATH; it is not a pip package.
waf-bypass = ["botasaurus"]

[project.scripts]
owasp-inspector = "owasp_inspector.cli.app:main"
owasp-inspector-legacy-menu = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["owasp_inspector*"]

[tool.ruff]
line-length = 120
# Logic/, UI/, Data/Queries, and main.py are the pre-v1 legacy engine: flat
# modules that resolve imports via main.py's own sys.path shim rather than
# being a real package, so imports necessarily land after that setup runs
# (E402). That's a structural property of the deliberately-still-supported
# legacy menu (`owasp-inspector-legacy-menu`), not a style lapse —
# rewriting it is a real refactor of working code, not a lint fix, and out
# of scope here. owasp_inspector/ (the actively-developed v1 engine) is
# held to full lint.
exclude = ["Logic", "UI", "Data/Queries", "main.py"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
