[project]
name = "owasp-inspector"
version = "0.1.0"
description = "Automated OWASP Top 10 assessment engine — one URL, one command."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "httpx",
    "python-dotenv",
    "colorama",
    "pydantic-settings>=2.0",
    "jinja2>=3.0",
    "xhtml2pdf>=0.2.11",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[project.scripts]
owasp-inspector = "owasp_inspector.cli.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["owasp_inspector*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
